--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-step-wizard": "^5.3.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
